--- a/GameEditor/imgui.ini
+++ b/GameEditor/imgui.ini
@@ -74,15 +74,19 @@ Size=316,136
 Collapsed=0
 
 [Window][FPS Graph]
-Pos=0,20
+Pos=242,19
 Size=341,280
 Collapsed=0
 
 [Window][Hardware information]
-Pos=0,20
-Size=1024,237
+Pos=339,94
+Size=267,238
 Collapsed=0
-DockId=0x0000000A,0
+
+[Window][Infrastructure information]
+Pos=468,163
+Size=267,386
+Collapsed=0
 
 [Table][0x47600645,3]
 RefScale=14
@@ -100,16 +104,14 @@ Column 4  Weight=1.0000
 Column 5  Weight=-1.0000
 
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
-DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
-  DockNode          ID=0x0000000A Parent=0x8B93E3BD SizeRef=1024,237 Selected=0xBE49C08A
-  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1024,509 Split=Y
-    DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1024,279 Selected=0xF3C3BC76
-    DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=1024,467 Split=Y
-      DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
-        DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=734,748 Split=X
-          DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
-          DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=491,748 CentralNode=1
-        DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=288,748 Selected=0xE7039252
-      DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
+DockNode          ID=0x00000001 Pos=597,84 Size=173,83 Selected=0x7B17B3D3
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,20 Size=1024,748 Split=Y
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1024,279 Selected=0xF3C3BC76
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1024,467 Split=Y
+    DockNode      ID=0x00000006 Parent=0x00000009 SizeRef=1920,373 Split=X
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=734,748 Split=X
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=241,748 Selected=0x29EABFBD
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=491,748 CentralNode=1
+      DockNode    ID=0x00000005 Parent=0x00000006 SizeRef=288,748 Selected=0xE7039252
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=1920,218 Selected=0xDBFE1153
 
