--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -196,6 +196,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Graphic.h" />
     <ClInclude Include="JSONParser.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshInfo.h" />
     <ClInclude Include="MeshLoader.h" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Pyramid.h" />
