--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="Pyramid.h">
       <Filter>Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="MeshInfo.h">
+      <Filter>Tools</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
