--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -204,6 +204,7 @@ copy "..\vcpkg\installed\x64-windows\bin\*.*" "$(OutDir)"</Command>
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="MeshInfo.h" />
     <ClInclude Include="MeshLoader.h" />
+    <ClInclude Include="Physics.hpp" />
     <ClInclude Include="Primitive.h" />
     <ClInclude Include="Pyramid.h" />
     <ClInclude Include="Texture2D.h" />
