--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="BoundingBox.hpp">
       <Filter>Tools</Filter>
     </ClInclude>
+    <ClInclude Include="Physics.hpp">
+      <Filter>Tools</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
